# RepPoints_Text

./: .gitignore  README.md  common.py  config.py  data.py  eval.py  predict.py  requirements.txt  train.py  viz.py
dataset/: __init__.py  dataset.py  text.py
dataset/eval_tools/: __init__.py  eval.py  utils.py
layers/: loss.py
layers/dcn/: CMakeLists.txt  README.md  deformable_conv.cu  deformable_conv.py  deformable_conv2d.cpp  deformable_conv2d.h  deformable_conv2d.py
modeling/: generalized_rcnn.py  model_fpn.py  reppoint_detector.py  resnet.py  target_match.py
utils/: obs_sync.py  point_generator.py  polygons.py
